--- a/jevoo/public/assets/css/style.css
+++ b/jevoo/public/assets/css/style.css
@@ -1011,7 +1011,7 @@ textarea:focus {
   border-bottom: 1px solid #efefef;
 }
 
-.header-top-settings ul li {
+.header-top-settings .nav > div {
   color: #555555;
   cursor: pointer;
   font-size: 14px;
@@ -1020,8 +1020,9 @@ textarea:focus {
   position: relative;
   margin-left: 20px;
   padding-left: 20px;
+  display: inline-block;
 }
-.header-top-settings ul li:before {
+.header-top-settings .nav > div:before {
   top: 50%;
   left: 0;
   width: 1px;
@@ -1033,14 +1034,24 @@ textarea:focus {
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
 }
-.header-top-settings ul li:first-child {
+.header-top-settings .nav > div:first-child {
   padding-left: 0;
   margin-left: 0;
 }
-.header-top-settings ul li:first-child:before {
+.header-top-settings .nav > div:first-child:before {
   display: none;
 }
-.header-top-settings ul li .dropdown-list {
+
+/* Fix language and currency alignment in same row */
+.header-top-settings .nav.flex-nowrap {
+  flex-wrap: nowrap !important;
+  width: 100%;
+}
+.header-top-settings .nav.flex-nowrap > div {
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+.header-top-settings .nav > div .dropdown-list {
   top: 100%;
   right: 0;
   position: absolute;
@@ -1060,33 +1071,49 @@ textarea:focus {
   pointer-events: none;
   border: 1px solid #efefef;
 }
-.header-top-settings ul li .dropdown-list li {
-  margin-left: 0;
-  padding: 0;
-}
-.header-top-settings ul li .dropdown-list li a {
+.header-top-settings .nav > div .dropdown-list a {
   color: #555555;
   font-size: 13px;
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 8px;
   padding: 5px 0 3px;
   text-transform: capitalize;
 }
-.header-top-settings ul li .dropdown-list li a:hover {
+.header-top-settings .nav > div .dropdown-list a:hover {
   color: #c29958;
 }
-.header-top-settings ul li .dropdown-list li a img {
+.header-top-settings .nav > div .dropdown-list a img {
   vertical-align: inherit;
 }
-.header-top-settings ul li .dropdown-list li:before {
-  display: none;
-}
-.header-top-settings ul li:hover .dropdown-list {
+.header-top-settings .nav > div:hover .dropdown-list {
   opacity: 1;
   visibility: visible;
   pointer-events: visible;
   -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
           transform: translateY(0);
+}
+
+/* Align flag image and language name in same line */
+.header-top-settings .nav > div.language {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.header-top-settings .nav > div.language img {
+  vertical-align: middle;
+  margin-right: 5px;
+  display: inline-block;
+}
+.header-top-settings .nav > div .dropdown-list a {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.header-top-settings .nav > div .dropdown-list a img {
+  vertical-align: middle;
+  margin-right: 0;
 }
 
 .welcome-message p {
