--- a/jevoo/public/assets/css/plugins/nice-select.css
+++ b/jevoo/public/assets/css/plugins/nice-select.css
@@ -123,7 +123,7 @@
     -webkit-transition: all 0.2s;
     transition: all 0.2s; }
     .nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
-      background-color: #f6f6f6; }
+      background-color: #c29958; }
     .nice-select .option.selected {
       font-weight: bold; }
     .nice-select .option.disabled {
