--- a/jevoo/public/assets/scss/components/_slider.scss
+++ b/jevoo/public/assets/scss/components/_slider.scss
@@ -6,6 +6,18 @@
     height: 530px;
     display: flex;
     align-items: center;
+    position: relative;
+
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: 1;
+    }
 
     // responsive
     @media #{$xxl-device} {
@@ -40,6 +52,7 @@
 
 .hero-slider-content {
     position: relative;
+    z-index: 2;
     // responsive
     @media #{$sm-device} {
         padding-right: 150px;
