feat: Add color in product slug pages

--- a/jevoo/public/assets/css/style.css
+++ b/jevoo/public/assets/css/style.css
@@ -3436,6 +3436,14 @@ body.fix {
   background-color: #808080;
 }
 
+.c-gold {
+  background-color: #FFD700;
+}
+
+.c-rosegold {
+  background-color: #E0BFB8;
+}
+
 .c-brown {
   background-color: #964B00;
 }
